logs/object_cloud/build.make.080.log.stderr
/home/dan/dan_ws/src/object_cloud/src/object_cloud_node.cpp: In function ‘void pcl_cb(const ConstPtr&)’:
/home/dan/dan_ws/src/object_cloud/src/object_cloud_node.cpp:43:22: error: invalid initialization of reference of type ‘pcl::PointCloud<pcl::PointXYZRGB>::Ptr& {aka boost::shared_ptr<pcl::PointCloud<pcl::PointXYZRGB> >&}’ from expression of type ‘const ConstPtr {aka const boost::shared_ptr<const pcl::PointCloud<pcl::PointXYZRGB> >}’
  pclCloud::Ptr& pt = input;
                      ^
make[2]: *** [CMakeFiles/object_cloud_node.dir/src/object_cloud_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/object_cloud_node.dir/all] Error 2
make: *** [all] Error 2
